gitignore definition $ pseudo elements hover, visited

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header id="top">
+    <header >
       <header class="header__navigation"> 
       <nav class="navigation navigation--js">
         <a class="navigation__link navigation__link--homepage" href="index.html"
@@ -21,12 +21,12 @@
         <a class="navigation__link" href="nauka-html.html">nauka html</a>
         <a class="navigation__link" href="nauka-css.html">nauka css</a>
       </nav>
-      <button class="hamburger hamburger--js">🍔</button>
+      <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍔</button>
 
     </header>
 
     <main class="main">
-      <header class="header">
+      <header class="header" id="top">
         <h1 class="main__heading main__heading--js">
           Konrad Bujas - strona domowa na potrzeby kursu WTF
         </h1>
@@ -191,7 +191,7 @@
             informacji ;)<br />
             Pozdrawiam i czekam na odpowiedź, hej! ;)
           </p>
-          <div class="newsletter__button" id="button">napisz do mnie ;)</div>
+          <button class="newsletter__button" id="button">napisz do mnie ;)</button>
         </article>
       </section>
     </main>
