--- a/nauka-html.html
+++ b/nauka-html.html
@@ -10,14 +10,15 @@
   </head>
 
   <body>
-    <header id="top">
-      <nav class="navigation">
+    <header class="header__navigation">
+      <nav class="navigation navigation--js">
         <a class="navigation__link navigation__link--homepage" href="index.html">strona główna</a>
         <a class="navigation__link" href="nauka-html.html">nauka html</a>
         <a class="navigation__link" href="nauka-css.html">nauka css</a>
         <a class="navigation__link" href="nauka-html.html">nauka html</a>
         <a class="navigation__link" href="nauka-css.html">nauka css</a>
       </nav>
+      <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍔</button>
     </header>
 
     <main class="main">
@@ -60,6 +61,10 @@
         <article class="learn-technique">
           <h3 class="learn-technique__title">przykładowe</h3>
           <p class="learn-technique__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, repudiandae. Et, repellendus alias asperiores harum possimus nemo minima eveniet? Recusandae dolores placeat necessitatibus iste assumenda numquam nam molestias facilis fugiat?</p>
+          <p class="
+          learn-technique__description
+          learn-technique__descriptionParagraph--js
+        "></p>
         </article>
 
         <article class="learn-technique">
@@ -97,5 +102,7 @@
       to jest stopka mojej strony i pasuje tu napisać coś mądrego -> 2021.03.17
       <a class="footer__link" href="#top">Wróć na górę strony</a>
     </footer>
+    <script></script>
+    <script src="main.js"></script>
   </body>
 </html>
