--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <a class="navigation__link" href="nauka-html.html">nauka html</a>
         <a class="navigation__link" href="nauka-css.html">nauka css</a>
       </nav>
+      <button class="mode--js" aria-label="zmień tryb kolorów">zmień tryb</button>
+
       <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍔</button>
 
     </header>
