ssh issues posting 02.02.2026

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         </article>
 
         <article class="learn-technique">
-          <h3 class="learn-technique__title">Przykładowy artykuł</h3>
+          <h3 class="learn-technique__title">02.02.2026</h3>
           <p class="learn-technique__description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+            Ciąg dalszy walki z uwierzytelnianiem GitHub i okazuje się, że dzisiaj mamy święto. Klucze SSH dodane znowu i tym razem zaskoczyło pięknie i mogę już pushować do repozytorium. Działa i z wbudowanego Basha z VSCode i z Basha systemowego oraz z aplikacji desktop GitHub. Pozdrawiam ;) 
 
           </p>
         </article>
